# nginx-adfiler

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  READme
CMake/: FindFolly.cmake  FindLibs.cmake  Functions.cmake
etc/: crontab
etc/conf/: nginx.conf
etc/conf/conf.d/: mapping.conf  old_mapping.conf
etc/conf/conf.d/backup/: mapping.conf  mapping.ssl.conf  old_mapping.conf  t.conf
etc/conf/sslkey/: reachmax.cn.cer  server.key
etc/html/: crossdomain.xml  index.html
etc/init.d/: ngx_mapping
etc/supervisor/: supervisord.conf
etc/supervisor/conf.d/: httpd.conf  logger.conf  subscriber.conf
logger/: CMakeLists.txt  logger.cc
logger/tests/: pub.php  sub.php
logger/utils/: log.h  log_asio.h
scripts/: log.mv.sh  log.rotate.httpd.sh  log.rotate.sh  log.zerofile.sh  mapping.redis.sh  mapping.scylla.sh  moniter.httpd.sh  moniter.ngx_mapping.sh  moniter.redis.sh
scripts/redis/: loadMapLogFromPip_fengxing.php  loadMapLogFromPip_iqiyi.php  loadMapLogFromPip_iqiyidmp.php  loadMapLogFromPip_ku6.php  loadMapLogFromPip_letv.php  loadMapLogFromPip_mz.php  loadMapLogFromPip_mz.sh  loadMapLogFromPip_pptv.php  loadMapLogFromPip_sohu.php  loadMapLogFromPip_tencent.php  loadMapLogFromPip_yinyt.php  loadMapLogFromPip_youku.php  loadMapLogFromPip_youkudmp.php
scripts/scylla/: cinlog.php  scylla.php  subscriber.dev.php  subscriber.php
scripts/scylla/clean/: common.php  fengxing.php  iqiyi.php  retargeting.php  sohu.php  tencent.php  yinyuetai.php
scripts/scylla/test/: test_scylla.php
scripts/tests/: access.php  mapping.log.prod  redis_export.php  redis_prod.php  redis_test.php  t.php  test_exmaples
src/: CMakeLists.txt  ngx_ad.cc  ngx_ad.h
src/handler/: mapping.h  mapping_ku6.h
src/httpd/: handler_base.h  request.h  response.h
src/model/: partner.h
src/utils/: cookie.h  helper.h
tests/: client.php  client_redis.php  client_scylla.php  logformat.php
tests/clean/: common.php  fengxing.php  iqiyi.php  iqiyi_dmp.php  ku6.php  letv.php  mgtv.php  pptv.php  retargeting.php  scylla.php  tencent.php  youku_dmp.php
